logo & badge added